<resources>
    <string name="app_name">SkyBiz Cash VF</string>
    <string name="app_version">SKYBIZ CASH VF - ver 2.1.7</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_setting">Settings</string>
    <string name="strGross">Gross\nAmount</string>
    <string name="strTotalQty">Quantity\nTender</string>
    <string name="strQuote">\"</string>
    <string name="reading_tag">Reading Tag...</string>
    <string name="dont_remove_tag">Don`t Remove The Tag</string>
    <string name="disable"> NFC is Disable</string>
    <string name="no_nfc_found">No NFC Found</string>
    <string name="no_nfc">To run this application Your device must have NFC Technology.
							Unfortunently Your device does not have NFC.Sorry for this inconvenience.
							Please press OK to exit.</string>
    <string name="nfc_disabled">Without NFC You cannot read Tags.Currently NFC is not enabled in your
        Device. Please go to the wireless settings and Enable NFC.</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="block_index_dynamic">Block %d:</string>
    <string name="auth_failed">Auth failed!</string>
    <string name="err_write_to_forbidden_block">Can not write to block that is the last one in partition and the 0 one in 0 partition!</string>
    <string name="write_random_dynamic">Write to random block %d!</string>
    <string name="err_block_index_out_of_bound">Block index must less than total blocks on card!</string>
    <string name="toast_need_data">Choose/enter data to read/write!</string>
    <string name="toast_not_mifare_classic">Not Mifare Classic card!</string>
    <string name="toast_write_success">Write success!</string>
    <string name="toast_write_fail">Write failed!</string>
    <string name="result_failed_the_following">Write the following block failed:</string>
    <string name="strSingleQuote">\'</string>
    <string name="strAt">\@</string>
    <string name="strAmp">&amp;</string>
    <string name="strAst">\*</string>
    <string name="strSlash">\/</string>
    <string name="strLess">&lt;</string>
    <string name="strMore">&gt;</string>
    <string name="strQuest">\?</string>
    <string name="mnSetting">Settings</string>
    <string name="mnBackup">Backup</string>
    <string name="mnAdminPassword">Change Admin Password</string>
    <string name="mnCustomer">Select Customer</string>
    <string name="mnSalesPerson">Select Sales Person</string>
    <string name="mnItem">Select Item</string>
    <string name="mnGuestCheck">Guest Check</string>
    <string name="mnReset">Reset Summary</string>
    <string name="mnVoid">Void Bill</string>
    <string name="mnReprint">Reprint Selected</string>
    <string name="mnReprint2">Reprint Last Bill</string>
    <string name="mnOrderSlip">Order Slip</string>
    <string name="mnByDesc">Serching By Description</string>
    <string name="mnOutJS">Outstanding Job Sheet</string>
    <string name="mnClosedJS">Closed Job Sheet</string>
    <string name="mnSalesDaily">Cash Sales</string>
    <string name="mnMemberCode">Key In Member Code</string>
    <string name="mnForceSync">Force Sync In All Master Files</string>
    <string name="txtDiscAmt">Discount (Amount)</string>
    <string name="txtDiscPer">Discount \n (%)</string>
    <string name="txtDelItem">Delete \n Item</string>
    <string name="txtOpenModif">Open \n Modifier</string>
    <string name="txtCloseModif">Close \n Modifier</string>
    <string name="sales_detail"><u>SALES DETAILS</u></string>
    <string name="cash_detail"><u>CASH DETAILS (SYSTEM CALCULATED)</u></string>
    <string name="cash_detail2"><u>CASH DETAILS (CASHIER CALCULATED)</u></string>
    <string name="bill"><u>BILLS ANALYSIS</u></string>
    <string name="gst"><u>GST SUMMARY</u></string>
    <string name="addOn"> Do you want to add-on ?</string>
    <string name="title_activity_cash_receipt">CashReceipt</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sync">Sync</string>
    <string name="title_activity_sales_order">SalesOrder</string>
    <string name="title_activity_credit_note">CreditNote</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_listing">Listing</string>
    <string name="title_activity_mservice">MService</string>
    <string name="hint_sign">Get Signature</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="hint_cancel">Cancel</string>

    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>

    <string name="title_activity_history_point">HistoryPoint</string>
    <string name="title_activity_point_redeem">PointRedeem</string>
    <string name="title_activity_member_list">MemberList</string>
    <string name="title_activity_item_listing">ItemListing</string>
    <string name="title_activity_item_group_list">ItemGroupList</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string-array name="printer_array">
        <item>No Printer</item>
        <item>AIDL</item>
        <item>Ipos AIDL</item>
        <item>Bluetooth</item>
        <item>Bluetooth Zebra</item>
        <item>USB</item>
        <item>Wifi</item>
    </string-array>
    <string-array name="db_array">
        <item>Localhost</item>
        <item>Cloud Server</item>
        <item>Android Server</item>
    </string-array>
    <string-array name="searchby_array">
        <item>By Code</item>
        <item>By Desc</item>
        <item>Show All</item>
    </string-array>
    <string-array name="searchby2_array">
        <item>Show All</item>
        <item>By CusCode</item>
        <item>By CusName</item>
    </string-array>
    <string-array name="searchby4_array">
        <item>By Supplier Code</item>
        <item>By Supplier Name</item>
        <item>Show All</item>
    </string-array>
    <string-array name="searchby3_array">
        <item>RepairType</item>
        <item>CaseType</item>
        <item>ServiceStatus</item>
    </string-array>
    <string-array name="search_sales">
        <item>By Code</item>
        <item>By Name</item>
        <item>Show All</item>
    </string-array>
    <string-array name="warranty_array">
        <item>NO WARRANTY</item>
        <item>IN WARRANTY</item>
    </string-array>
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Normal</item>
    </string-array>
    <string-array name="sex_array">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="married_array">
        <item></item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string-array name="ras_array">
        <item></item>
        <item>Melayu</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Other</item>
    </string-array>
    <string-array name="membertype_array">
        <item>Silver Member</item>
        <item>Gold Member</item>
        <item>Diamond Member</item>
    </string-array>
    <string-array name="defuom_array">
        <item>Base</item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
    </string-array>
    <string-array name="datebranch_array">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Choose Date</item>
    </string-array>
    <string-array name="datebydate_array">
        <item></item>
        <item>Today</item>
        <item>7 Days</item>
        <item>Choose Date</item>
    </string-array>
    <string-array name="srstatus_array">
        <item></item>
        <item>Open</item>
        <item>Closed</item>
    </string-array>
    <string-array name="eachslip_array">
        <item>Each Item One Slip</item>
        <item>Each Group One Slip</item>
    </string-array>
    <string-array name="papersize">
        <item>58mm</item>
        <item>78mm</item>
    </string-array>
    <string-array name="FormatReceipt">
        <item>Standard</item>
        <item>Format01</item>
        <item>Format02</item>
    </string-array>
    <string-array name="copies_array">
        <item>1 = Confirmation Dialog</item>
        <item>2 = Confirmation Dialog</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
