<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="skybiz.com.posoffline.ui_CreditNote.CreditNote">
    <item
        android:id="@+id/mnCustomer"
        android:orderInCategory="100"
        android:title="@string/mnCustomer"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnItem"
        android:orderInCategory="100"
        android:title="@string/mnItem"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnReprint2"
        android:orderInCategory="100"
        android:title="@string/mnReprint2"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnReprint"
        android:orderInCategory="100"
        android:title="@string/mnReprint"
        app:showAsAction="never" />
</menu>
