<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_RegisterNFC.RegisterNFC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_page_icon"
            android:contentDescription="@string/app_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/pbBar">

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reading_tag"
                android:textColor="#39aca2"
                android:textSize="25sp"
                android:textStyle="normal"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_remove_tag"
                android:textColor="#c61c00"
                android:textSize="25sp"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_below="@id/text"/>
            <ProgressBar
                android:id="@+id/pbWaitForCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>